Fix of hidden every first <li> element
Every first <li> element in the summary menu was hidden by CSS. Even in the subitems.
Not sure if the intention was to hide "BigClown Documentation CZ" link. I changed the class of the CSS rule.
Please fix if the rule was for another reason. Thanks

--- a/docs/styles/website.css
+++ b/docs/styles/website.css
@@ -3025,9 +3025,12 @@ input[type="email"] {
       width: 6.349em;
       height: 1.302em;
   }
-  .summary li:first-child{
+
+  .custom-link {
     display: none;
   }
+
+
   .table-container{
     width: 100%;
     overflow: hidden;
